[package]
name = "rjplc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
dur = "0.5.3"
itertools = "0.14.0"
nom = "7.1.3"
regex = "1.11.1"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
homework = []
measure = []
default = []

[workspace]
members = [".", "rjplc-wasm"]
